--- a/css/main.css
+++ b/css/main.css
@@ -5,27 +5,28 @@
    ========================================================================== */
 
 body{
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    line-height: 1.6em;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    line-height: 20px;
     overflow-x: hidden;
     color: #565a5c;
     position: relative;
 }
 
 a[href]:not([class]){
-/*    text-decoration: underline;*/
+    text-decoration: none;
 }
 
 
-@font-face {
-    font-family: David-Bold;
-    src: url("../fonts/davidbd.ttf");
+
+h1,h2{
+    font-family: 'Abril Fatface', cursive;
+    color:#3c4447;
+
 }
 
-h1{
-    font-family: "David-Bold",  "Open Sans" ,sans-serif ;
-    color: #191919;
+p{
+    color:#3c4447;
 }
 
 /*@media screen and (max-width: 769px){*/
@@ -45,76 +46,59 @@ section{
     padding: 30px 0;
 }
 
+
+
 .button{
-    background-color: #ec8244;
+    background-color: transparent;
     color: #fff;
     font-size: 1em;
     width: 150px;
     height: 40px;
-    padding: 12px 0;
+
     position: relative;
     border-radius: 0;
-    border: 0;
+    border: 1px solid #fff;
     max-width: 100%;
 
 }
 
-.button span{
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 150px;
-    height: 40px;
-    transition: all .5s;
-    line-height: 40px;
+
+
+
+.button:hover{
+    background-color: #0f0f0f;
 }
 
-.button:before{
-    content: "";
-    display: block;
-    background-color: #fff;
-    width: 0;
-    height: 40px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    transition: all .5s;
-    border: 1px solid #e1e1e1;
-
-}
-
-.button:hover:before{
-    width: 150px;
-}
 
 .button:hover span{
-    color: #565a5c;
+  color: #ffffff;
 }
 
-.button-white{
-    background-color: #fff;
-    border: 1px solid #e1e1e1;
-    color: #565a5c;
-}
 
-.button-white:before{
-    content: "";
-    display: block;
-    background-color: #ec8244;
-    width: 0;
+.button-black{
+    background-color: transparent;
+    color: #444;
+    font-size: 1em;
+    width: 150px;
     height: 40px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    transition: all .5s;
+
+    position: relative;
+    border-radius: 0;
+    border: 1px solid #444;
+    max-width: 100%;
+
 }
 
-.button-white:hover span{
-    color: #fff;
+
+
+
+.button-black:hover{
+    background-color: #0f0f0f;
 }
 
-.button-white:hover{
-    color: #fff;
+
+.button-black:hover span{
+    color: #444;
 }
 
 
@@ -133,17 +117,17 @@ section{
 
 .social-list li  a{
     color: #fff;
-    font-size: 1.3em;
+    font-size: 1em;
     list-style: none;
     display: inline-block;
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    /* border-radius: 50%; */
+    border: 1px solid #fff;
     margin: 5px;
-    background-color: rgba(255, 255, 255, 0.32);
+    /* background-color: rgba(255, 255, 255, 0.32); */
     text-align: center;
-
 }
 
 /*/////////////////////////////////ends here/////////////////////////*/
@@ -172,8 +156,12 @@ nav ul{
 
 }
 
+.ul-nav-item{
+    margin-top: -20px;
+}
+
 .custom-nav ul li a{
-    line-height: 50px;
+    line-height: 5px;
     color: #000;
     font-size: 14px;
     transition: all .4s ease-in-out;
@@ -188,52 +176,6 @@ nav ul{
 }
 
 
-.custom-nav ul li:nth-child(8) a{
-    background-color: #ec8244;
-    line-height: 20px;
-    margin: 15px 0;
-    color: #fff;
-}
-
-.custom-nav ul li:nth-child(8) a:hover{
-    background-color: #ec8244;
-    line-height: 20px;
-    margin: 15px 0;
-    color: #fff;
-}
-
-.custom-nav ul li:nth-child(8) a:focus{
-    background-color: #ec8244;
-    line-height: 20px;
-    margin: 15px 0;
-    color: #fff;
-}
-
-
-.search-container{
-    position: absolute;
-    top: 0;
-    background-color: #1f1f1f;
-    height: 100vh;
-    display: -webkit-flex;
-    -webkit-justify-content: center;
-    -webkit-align-items: center;
-    -moz-justify-content: center;
-    -moz-align-items: center;
-    justify-content: center;
-    align-items: center;
-}
-
-.search-closed{
-    width: 100%;
-    transform: translateX(-100%);
-    transition: all .4s ease-in-out;
-
-}
-
-.search-open{
-    transform: translateX(100%);
-}
 
 
 
@@ -243,7 +185,7 @@ nav ul{
 }
 
 .humberger{
-    background-color: #ddd;
+
     padding: 9px 10px;
     margin-top: 25px;
     margin-left: 10px;
@@ -295,26 +237,16 @@ nav ul{
                                  Hero Section
 //////////////////////////////////////////////////////////////////////////////////*/
 
-.welcome-message{
-    padding: 10px;
-}
 
 @media screen and (min-width: 769px){
-    .welcome-message{
-        padding: 100px 45px;
-    }
+   /*
 
     .hero-section{
         padding: 50px;
     }
-
+*/
 }
 
-
-.welcome-message .clear{
-    position: relative;
-    z-index: 1;
-}
 
 .title{
     font-size: 7vw;
@@ -325,44 +257,6 @@ nav ul{
     user-select: none;
 
 }
-
-.sidenav div div {
-
-    padding: 20px 190px 5px 20px;
-    margin-top: 15px;
-}
-}
-.sidenav div div a{
-    width: 90px;
-}
-
-.mytitle{
-    position: relative;
-}
-
-.mytitle:after{
-
-    display: block;
-    margin: 10px auto;
-    position: absolute;
-    width: 30%;
-    height: 2px;
- /*   top:10px;*/
-    background-color: #f9d616;
-    /*background-color: rgba(140,223,255,.8);*/
-    content: '';
-    line-height: 0;
-    /*top: 42px;*/
-    -webkit-transition: all 1s ease;
-    transition: all 1s ease;
-}
-
-
-.mytitle:hover::after {
-    width: 100%;
-
-}
-
 
 .title:before{
     background-image: -webkit-linear-gradient(270deg,#cfd1d3,#e3e4e5);
@@ -380,14 +274,66 @@ nav ul{
     z-index: 10;
 }
 
-.welcome-message .hero-txt{
-    margin-bottom: 20px;
+
+
+.mytitle{
+    position: relative;
+}
+
+.mytitle:after{
+
+    display: block;
+    margin: 10px auto;
+    position: absolute;
+    width: 6%;
+    height: 2px;
+ /*   top:10px;*/
+    background-color: #f9d616;
+    /*background-color: rgba(140,223,255,.8);*/
+    content: '';
+    line-height: 0;
+    /*top: 42px;*/
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
+}
+
+
+.mytitle:hover::after {
+    width: 16%;
+
+}
+
+
+.tagline {
+    vertical-align: middle;
+    text-align:left;
 }
 
 .hero-section {
-    background:url("../hero-img.jpg");
+    background:url("../banner.jpg");
     width: 100%;
     height:100vh;
+
+    display: -webkit-flex;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    justify-content: center;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    align-items: center;
+}
+
+.v-large-title {
+    color: #fff;
+    font-weight: 400;
+    line-height: 65px;
+    font-size: 58px;
+    margin-bottom: 40px;
+}
+
+.h-para{
+    /*color:#fff;*/
+    font-size: 14px;
 }
 
 /* The side navigation menu */
@@ -402,19 +348,9 @@ nav ul{
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
-   /* display: -webkit-flex;
-    -webkit-justify-content: flex-start;
-    -moz-justify-content: flex-start;
-    justify-content: flex-start;
-    -webkit-align-items: center;
-    -moz-align-items: center;
-    align-items: center;*/
+
 }
 
-.v-alignmnt{
-    vertical-align: middle;
-    text-align: center;
-}
 
 /* The navigation menu links */
 .sidenav a {
@@ -427,20 +363,12 @@ nav ul{
 }
 
 
-/*bars vertical*/
-.cde:before {
-    content: '\2630';
-    position: absolute;
-    top: -21px;
-    left: -81px;
-    color: #000;
-    font-size: 28px;
-}
+
 /* When you mouse over the navigation links, change their color */
 .sidenav a {
     transition: all .2s ease-in-out;
     font-family: 'Abril Fatface', cursive;
-    font-size: 45px;
+    font-size: 22px;
 }
 .sidenav a:hover, .offcanvas a:focus{
     color: rgba(249, 214, 22, 0.85);
@@ -450,10 +378,11 @@ nav ul{
 /* Position and style the close button (top right corner) */
 .sidenav .closebtn {
     position: absolute;
-    top: 35%;
-    right: 25px;
+    top: 22%;
+    right: 10px;
     font-size: 60px;
-    margin-left: 50px;
+    display: block;
+    margin-left: 20px;
 }
 
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
@@ -464,11 +393,11 @@ nav ul{
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
+    .sidenav {padding-top: 0px;}
 
     .sidenav a
     { /* font-size: 35px;*/
-        line-height: 60px;
+        line-height: 10px;
         text-decoration: none;
        }
 
@@ -485,20 +414,167 @@ nav ul{
 
 
 
-
-
-
 /*//////////////////////////////////////////////////////////////////////////////////
-                                 About us Section
+                                 service Section
 //////////////////////////////////////////////////////////////////////////////////*/
 
 @media screen and (min-width: 769px){
 
-    #about-section{
+    #services-section{
         padding: 5% 0;
     }
+}
+
+
+.services-card{
+    width:200px;
+    max-width: 100%;
+    margin: 0 auto;
+    height: 215px;
 
 }
+
+
+
+
+
+/*//////////////////////////////////////////////////////////////////////////////////
+                                 feature Section
+//////////////////////////////////////////////////////////////////////////////////*/
+
+@media screen and (min-width: 769px){
+
+
+}
+
+.green-bg{
+    background-color: #6dcc7a;
+    width:87%;
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+
+
+/*//////////////////////////////////////////////////////////////////////////////////
+                                Work Section
+//////////////////////////////////////////////////////////////////////////////////*/
+
+
+@media screen and (min-width: 769px){
+
+    #work-section{
+        padding: 8% 0;
+    }
+}
+
+
+.work-card{
+    width:292px;
+    max-width: 100%;
+    margin: 0 auto;
+
+}
+
+.carousel-indicators {
+    position: absolute;
+    bottom: 65px;
+
+    padding-right: 80px;
+}
+.owl-carousel div.owl--text {
+    position: absolute;
+    bottom: 0;
+    /* left: 2em; */
+    width: 100%;
+    height: 21em;
+    padding: .9em 1em;
+    background: rgba(25, 46, 58, 0.47);
+    border-radius: 4px;
+    color: #fff;
+}
+
+.carousel-indicators li {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    margin: 1px;
+    text-indent: -999px;
+    cursor: pointer;
+    background-color: #000\9;
+    background-color: rgba(0,0,0,0);
+    border: 1px solid #000;
+    border-radius: 10px;
+}
+
+.carousel-indicators .active {
+    width: 15px;
+    height: 15px;
+    margin: 0;
+    background-color: #f9d616;
+    border: 1px solid #000;
+}
+
+
+/*//////////////////////////////////////////////////////////////////////////////////
+                                chooseus Section
+//////////////////////////////////////////////////////////////////////////////////*/
+
+
+@media screen and (min-width: 769px){
+
+    #chooseus-section{
+        padding: 8% 0;
+    }
+}
+
+
+.fixed-height-block{
+    width: 533px;
+    max-width: 100%;
+
+
+}
+
+.green-block{
+    background-color: #6dcc7a;
+    height:150px;
+
+    max-width: 100%;
+}
+
+
+.black-block{
+    background-color: #3e4349;
+    height:150px;
+
+    max-width: 100%;
+
+}
+
+/*//////////////////////////////////////////////////////////////////////////////////
+                               Team Section
+//////////////////////////////////////////////////////////////////////////////////*/
+
+
+@media screen and (min-width: 769px){
+
+    #Team-section{
+        padding: 8% 0;
+    }
+}
+.card-team {
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.23),inset 0 0 0 0 hsla(0,0%,100%,.2)!important;
+    background-color: #ffffff;
+
+}
+
+.card-size{
+    width:292px;
+    max-width: 100%;
+    height:230px;
+}
+
 
 
 /*//////////////////////////////////////////////////////////////////////////////////
@@ -506,122 +582,22 @@ nav ul{
 //////////////////////////////////////////////////////////////////////////////////*/
 
 #footer-section{
-   background-color: #78e1fb;
+   background-color: #3e4349;
     color: #fff;
 }
 
-
-
-
-/*//////////////////////////////////////////////////////////////////////////////////
-                                 Sign up Section
-//////////////////////////////////////////////////////////////////////////////////*/
-
-#signup-section{
-    background-color: #f5f5f5;
-    height: 100vh;
-    display: -webkit-flex;
-    -webkit-justify-content: center;
-    -webkit-align-items: center;
-    -moz-justify-content: center;
-    -moz-align-items: center;
-    justify-content: center;
-    align-items: center;
-
-}
-
-.card{
-    background-color: #fff;
-    overflow: inherit;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,.23), inset 1px 1px 0 0 hsla(0,0%,100%,.2);
-    padding: 5%;
-}
-
-#signup-section form > h2{
-    color: #ec8244;
-    font-family: "Open Sans", sans-serif;
-    margin: 60px 0 30px 0;
-}
-
-
- form .form-group input{
-    border-radius: 0;
-    width: 100%;
-    box-shadow: none;
-    background-color: #f6f6f6;
-    border: 1px solid #dadada;
-    padding: 25px;
-
-}
-
-
-form .form-group button {
-    margin: 20px 0;
-
-}
-
-
-/*//////////////////////////////////////////////////////////////////////////////////
-                                 Member profile Section
-//////////////////////////////////////////////////////////////////////////////////*/
-
-@media screen and (min-width: 769px) {
-    #member-profile-section{
-        padding-top: 80px;
-    }
-
-
-    }
-
-#member-profile-section{
-    background-color: #f5f5f5;
-
-}
-
-#member-profile-section .card {
-    padding: 3%;
-}
-
-
-#member-profile-section .joined{
-    position: relative;
-    margin-top: -70px;
-}
-
-
-
-#member-profile-section .joined-d{
-    position: absolute;
-    bottom: -20%;
-    left: 50%;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    background-color: teal;
+.footer-send-btn {
+    background: #f7d817;
     color: #ffffff;
-    font-size: 13px;
-    transform: translate(-50%);
+    border-radius: 0px;
+    font-size: 14px;
+    border-color: transparent;
 }
 
-
-#member-profile-section .joined-d p:not(:last-child){
-    margin: 0;
-    padding-top: 22px;
-
+.custom-input-box{
+    border-radius: 0px;
+    border-color: transparent;
 }
-
-
-#member-profile-section h3{
-    background-color: #1bb2e5;
-    padding: 10px;
-    color: #fff;
-    margin: 0;
-    font-family: 'roboto' , sans-serif;
-    font-weight: 400;
-}
-
-
-
 
 
 
@@ -631,7 +607,108 @@ form .form-group button {
     margin: 0;
 }
 
-.p-0{
-    margin: 0;
+.m-5{
+    margin: 5px;
+}
+.m-10{
+    margin: 10px;
+}
+.m-15{
+    margin: 15px;
 }
 
+.m-b-5{
+    margin-bottom: 5px;
+
+}
+.m-b-10{
+    margin-bottom: 10px;
+
+}
+.m-b-15{
+    margin-bottom: 15px;
+
+}
+.m-b-20{
+    margin-bottom: 20px;
+
+}
+
+.m-b-30{
+    margin-bottom: 30px;
+
+}
+
+.m-b-40{
+    margin-bottom: 40px;
+
+}
+
+.m-t-5{
+    margin-top: 5px;
+
+
+}
+.m-t-10{
+    margin-top: 10px;
+
+}
+.m-t-15{
+    margin-top: 15px;
+}
+.m-t-20{
+    margin-top: 20px;
+}
+
+.m-t-30{
+    margin-top: 30px;
+}
+
+
+.m-t-40{
+    margin-top: 40px;
+}
+
+
+
+
+.p-0{
+  padding: 0;
+}
+
+.p-5{
+    padding: 5PX;
+}
+
+
+.p-10{
+    padding: 10PX;
+}
+
+
+.p-20{
+    padding: 20PX;
+}
+
+.p-30{
+    padding: 30PX;
+}
+
+.p-t-40{
+    padding-top: 40px;
+}
+
+
+
+
+.f-w{
+    color:#ffffff!important;
+}
+
+.f-g {
+    color: #bfc0c2
+}
+
+.f-40{
+    font-size:40px;
+}
