--- a/css/main.css
+++ b/css/main.css
@@ -421,7 +421,7 @@ nav ul{
 @media screen and (min-width: 769px){
 
     #services-section{
-        padding: 5% 0;
+        padding: 7% 0;
     }
 }
 
@@ -442,9 +442,12 @@ nav ul{
                                  feature Section
 //////////////////////////////////////////////////////////////////////////////////*/
 
+
 @media screen and (min-width: 769px){
 
-
+    #features-section{
+        padding: 7% 0;
+    }
 }
 
 .green-bg{
@@ -464,7 +467,7 @@ nav ul{
 @media screen and (min-width: 769px){
 
     #work-section{
-        padding: 8% 0;
+        padding: 7% 0;
     }
 }
 
@@ -524,7 +527,7 @@ nav ul{
 @media screen and (min-width: 769px){
 
     #chooseus-section{
-        padding: 8% 0;
+        padding: 7% 0;
     }
 }
 
@@ -560,7 +563,7 @@ nav ul{
 @media screen and (min-width: 769px){
 
     #Team-section{
-        padding: 8% 0;
+        padding: 7% 0;
     }
 }
 .card-team {
@@ -574,6 +577,204 @@ nav ul{
     max-width: 100%;
     height:230px;
 }
+
+
+/*//////////////////////////////////////////////////////////////////////////////////
+                               before client Section
+//////////////////////////////////////////////////////////////////////////////////*/
+
+
+@media screen and (min-width: 769px){
+
+    #beforeclient-section{
+        padding: 8% 2% 6% 2%;
+
+    }
+}
+.beforeclient-section {
+    background:url("../background.png");
+    width: 100%;
+
+
+
+}
+
+
+
+
+.diagonal-line {
+    width: 140px;
+    height: 47px;
+    border-bottom: 2px solid #ecce2b;;
+    -webkit-transform:
+            translateY(20px)
+            translateX(5px)
+            rotate(120deg);
+    position: absolute;
+    top: 36px;
+    left: -42px;
+
+
+}
+
+.client{
+    background-color: #f5f5f5;
+    width: 83%;
+    max-width: 100%;
+    margin: 0 auto;
+    /*height:300px;*/
+    padding: 20px 10px 40px 10px;
+    position: relative;
+    /* margin-top: -109px; */
+    top: -100px;
+}
+
+.card-logo{
+    width: 78%;
+    height: 70px;
+text-align: center;
+/* box-shadow: 0 2px 4px 0 rgba(0,0,0,.23),inset 1px 1px 0 0 hsla(0,0%,100%,.2)!important; */
+/*background-color: rgba(234, 228, 228, 0.52);
+border: 1px solid #ededed;*/
+display: flex;
+justify-content: center;
+align-items: center;
+padding: 25px;
+margin: 3px 5px;
+overflow: hidden;
+}
+
+
+
+/*//////////////////////////////////////////////////////////////////////////////////
+                                 Testimonial Section
+//////////////////////////////////////////////////////////////////////////////////*/
+
+
+.testimonial{
+
+    background:url("../234.png");
+    width: 100%;
+    margin-top: -195px;
+
+
+}
+
+small{
+    color:#dfc221;
+}
+
+
+
+/* Carousel */
+
+/*#quote-carousel {
+    padding: 0 10px 30px 10px;
+    margin-top: 30px;
+    !* Control buttons  *!
+    !* Previous button  *!
+    !* Next button  *!
+    !* Changes the position of the indicators *!
+    !* Changes the color of the indicators *!
+}*/
+#quote-carousel .carousel-control {
+    background: none;
+    color: #CACACA;
+    font-size: 2.3em;
+    text-shadow: none;
+    margin-top: 85px;
+}
+/*#quote-carousel .carousel-control.left {
+    left: -60px;
+}
+#quote-carousel .carousel-control.right {
+    right: -60px;
+}*/
+/*#quote-carousel .carousel-indicators {
+    right: 50%;
+    top: auto;
+    bottom: 0px;
+    margin-right: -19px;
+}*/
+/*#quote-carousel .carousel-indicators li {
+    width: 50px;
+    height: 50px;
+    margin: 5px;
+    cursor: pointer;
+    border: 4px solid #CCC;
+    border-radius: 50px;
+    opacity: 0.4;
+    overflow: hidden;
+    transition: all 0.4s;
+}*/
+/*#quote-carousel .carousel-indicators .active {
+    background: #333333;
+    width: 128px;
+    height: 128px;
+    border-radius: 100px;
+    border-color: #f33;
+    opacity: 1;
+    overflow: hidden;
+}*/
+.carousel-inner {
+    min-height: 300px;
+}
+.item blockquote {
+    border-left: none;
+    margin: 0;
+}
+
+/*quotes mark*/
+/*.item blockquote p:before {
+    content: "\f10d";
+    font-family: 'Fontawesome';
+    float: left;
+    margin-right: 10px;
+}*/
+
+/*quotes mark end*/
+
+.testimonial-pic{
+    width: 80px;
+    height: 80px;
+    margin-bottom: 15px!important;
+    cursor: pointer;
+    border: 4px solid #CCC;
+    border-radius: 50px;
+    opacity: 0.4;
+    overflow: hidden;
+    transition: all 0.4s;
+    margin: 0 auto;
+}
+
+
+
+
+/*//////////////////////////////////////////////////////////////////////////////////
+                                 Contact Section
+//////////////////////////////////////////////////////////////////////////////////*/
+
+@media screen and (min-width: 769px){
+
+    #contact-section{
+        padding: 8% 7%;
+
+    }
+}
+
+
+
+.form-custom{
+    width:84%;
+    max-width: 100%;
+    margin:0 auto;
+    margin-top: 14%;
+}
+
+
+
+
+
 
 
 
@@ -596,7 +797,11 @@ nav ul{
 
 .custom-input-box{
     border-radius: 0px;
-    border-color: transparent;
+    border-color: #e5e5e5;
+}
+
+.msg-input{
+    height:150px!important;
 }
 
 
@@ -692,6 +897,15 @@ nav ul{
 
 .p-30{
     padding: 30PX;
+}
+
+
+.p-t-10{
+    padding-top: 10px;
+}
+
+.p-t-20{
+    padding-top: 20px;
 }
 
 .p-t-40{
