--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,11 @@ a[href]:not([class]){
 
 
 h1,h2{
-    font-family: 'Abril Fatface', cursive;
+   /* font-family: 'Abril Fatface', cursive;*/
+  /*  font-family: 'Oswald', sans-serif;*/
+   /* font-family: 'Exo', sans-serif;*/
+    /*font-family: 'Josefin Slab', serif;*/
+    font-family: 'overpass', serif;
     color:#3c4447;
 
 }
@@ -278,6 +282,7 @@ nav ul{
 
 .mytitle{
     position: relative;
+    font-weight: 700;
 }
 
 .mytitle:after{
@@ -326,8 +331,8 @@ nav ul{
 .v-large-title {
     color: #fff;
     font-weight: 400;
-    line-height: 65px;
-    font-size: 58px;
+    line-height: 80px;
+    font-size: 70px;
     margin-bottom: 40px;
 }
 
@@ -653,7 +658,7 @@ overflow: hidden;
 
 .testimonial{
 
-    background:url("../234.png");
+    background:url("../test.png") center;
     width: 100%;
     margin-top: -195px;
 
